--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -1,78 +1,34 @@
 @import 'https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap';
 @tailwind components;
 @tailwind utilities;
+@tailwind base;
 
 :root {
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-	line-height: 1.5;
 	font-weight: 400;
 	color-scheme: light dark;
-	color: rgb(255 255 255 / 87%);
-	background-color: #242424;
+	font-size: 16px;
+	color: black;
+	background-color: #fff;
 	font-synthesis: none;
 	text-rendering: optimizelegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	text-size-adjust: 100%;
+}
+
+#app {
+	@apply px-4;
+
+	max-width: 1280px;
+	margin: 0 auto;
 }
 
 a {
-	@apply font-medium;
-
-	/* font-weight: 500; */
-	color: #646cff;
 	text-decoration: inherit;
-}
-
-a:hover {
-	color: #535bf2;
 }
 
 body {
 	margin: 0;
-	display: flex;
-	place-items: center;
 	min-width: 320px;
 	min-height: 100vh;
-}
-
-h1 {
-	font-size: 3.2em;
-	line-height: 1.1;
-}
-
-button {
-	border-radius: 8px;
-	border: 1px solid transparent;
-	padding: 0.6em 1.2em;
-	font-size: 1em;
-	font-weight: 500;
-	font-family: inherit;
-	background-color: #1a1a1a;
-	cursor: pointer;
-	transition: border-color 0.25s;
-}
-
-button:hover {
-	border-color: #646cff;
-}
-
-button:focus,
-button:focus-visible {
-	outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-	:root {
-		color: #213547;
-		background-color: #fff;
-	}
-
-	a:hover {
-		color: #747bff;
-	}
-
-	button {
-		background-color: #f9f9f9;
-	}
 }
