--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -6,7 +6,6 @@
 :root {
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 	font-weight: 400;
-	color-scheme: light dark;
 	font-size: 16px;
 	color: black;
 	background-color: #fff;
@@ -31,4 +30,8 @@ body {
 	margin: 0;
 	min-width: 320px;
 	min-height: 100vh;
+}
+
+.mask {
+	@apply fixed top-0 left-0 bottom-0 right-0 bg-gray opacity-50 z-2;
 }
