--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -15,12 +15,12 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
-#app {
+/* #app {
 	@apply px-4;
 
 	max-width: 1280px;
 	margin: 0 auto;
-}
+} */
 
 a {
 	text-decoration: inherit;
