--- a/src/widgets/StartScreen/ui/StartScreen.module.scss
+++ b/src/widgets/StartScreen/ui/StartScreen.module.scss
@@ -1,5 +1,5 @@
 .StartScreen {
-	@apply bg-blue flex justify-between max-w-[1400px] gap-x-16 px-16 py-8;
+	@apply bg-blue flex items-stretch justify-between max-w-[1400px] gap-x-16 px-16 py-8;
 
 	margin: 0 auto;
 }
