--- a/src/widgets/Header/ui/Header.module.scss
+++ b/src/widgets/Header/ui/Header.module.scss
@@ -13,3 +13,7 @@
 .bottom {
 	@apply absolute left-0 right-0 top-full h-screen bg-gray bg-opacity-80;
 }
+
+.toggled {
+	@apply bg-blue border-blue text-white;
+}
