--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,6 +4,8 @@
 @tailwind base;
 
 :root {
+	@apply w-full h-full;
+
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 	font-weight: 400;
 	font-size: 16px;
@@ -23,8 +25,4 @@ body {
 	margin: 0;
 	min-width: 320px;
 	min-height: 100vh;
-}
-
-.mask {
-	@apply fixed top-0 left-0 bottom-0 right-0 bg-gray opacity-50 z-2;
 }
