--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,8 +4,6 @@
 @tailwind base;
 
 :root {
-	@apply w-full h-full;
-
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 	font-weight: 400;
 	font-size: 16px;
@@ -24,5 +22,9 @@ a {
 body {
 	margin: 0;
 	min-width: 320px;
+	min-height: 100vh;
+}
+
+#root {
 	min-height: 100vh;
 }
