--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -2,6 +2,12 @@
 	@apply cursor-pointer px-4 py-2;
 }
 
+.clear {
+	@apply p-0;
+
+	text-align: unset;
+}
+
 .default {
 	@apply bg-blue text-white rounded-md hover:bg-black;
 
