add complete exercise

--- a/src/pages/Exercise/ui/ExercisePage.module.scss
+++ b/src/pages/Exercise/ui/ExercisePage.module.scss
@@ -2,5 +2,5 @@
 	@apply grid gap-10;
 
 	// grid-template-areas: 'back content rightbar';
-	grid-template-columns: auto 1fr 100px;
+	grid-template-columns: auto 1fr min-content;
 }
